[metadata]
name = django-celery-heartbeat
version = 0.1.0
description = A Django app to provide basic celery health monitoring.
long_description = file: README.rst
url = https://github.com/octavenz/django-celery-heartbeat
author = Richard Campen
author_email = richard@campen.co
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
